--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Payment Page</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body style="background-color: rgb(207, 207, 207);">
+  <body style="background-color: rgb(255, 255, 255);">
     <!-- back indicator using hand -->
      <div style="margin: 10px; margin-top: 25px;">
-        <p>1</p>
+        <img src="./h1.png" style="width: 50px; height: 50px;" />
      </div>
     <!-- card container -->
     <div class="cardContainer">
