--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body style="background-color: rgb(255, 255, 255);">
     <!-- back indicator using hand -->
-     <div style="margin: 10px; margin-top: 25px;">
-        <img src="./h1.png" style="width: 50px; height: 50px;" />
+     <div style="margin: 5px; margin-top: 20px;" id="hand">
+        <img src="./h1.png" style="width: 30px; height: 30px;" />
      </div>
     <!-- card container -->
     <div class="cardContainer">
