--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     ></script>
   </head>
   <body style="background-color: rgb(255, 255, 255)">
+    <!-- chatbot here -->
+    <iframe	style="width: 400px; height: 600px;" src="https://app.fastbots.ai/embed/cm0e0dan41dmnsvbgb6s2hawt"></iframe>
     <!-- back indicator using hand -->
     <div style="margin: 5px; margin-top: 20px" id="hand">
       <img src="./h1.png" style="width: 30px; height: 30px" />
