adding the chatbot window

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
       type="module"
     ></script>
+    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cm0e0dan41dmnsvbgb6s2hawt"></script>
   </head>
   <body style="background-color: rgb(255, 255, 255)">
     <!-- chatbot here -->
