adding the chatbot window

--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
       src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
       type="module"
     ></script>
-    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cm0e0dan41dmnsvbgb6s2hawt"></script>
   </head>
-  <body style="background-color: rgb(255, 255, 255)">
-    <!-- chatbot here -->
-    <iframe	style="width: 400px; height: 600px;" src="https://app.fastbots.ai/embed/cm0e0dan41dmnsvbgb6s2hawt"></iframe>
+  <body style="background-color: rgb(255, 255, 255)">z
     <!-- back indicator using hand -->
     <div style="margin: 5px; margin-top: 20px" id="hand">
       <img src="./h1.png" style="width: 30px; height: 30px" />
