--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="module"
     ></script>
   </head>
-  <body style="background-color: rgb(255, 255, 255)">z
+  <body style="background-color: rgb(255, 255, 255)">
     <!-- back indicator using hand -->
     <div style="margin: 5px; margin-top: 20px" id="hand">
       <img src="./h1.png" style="width: 30px; height: 30px" />
